--- a/package.json
+++ b/package.json
@@ -59,12 +59,14 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@tiptap/core": "^2.0.3",
     "@tiptap/extension-character-count": "^2.0.3",
+    "@tiptap/extension-code-block-lowlight": "^2.26.3",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-placeholder": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lowlight": "^2.9.0",
     "lucide-react": "^0.370.0",
     "tailwind-merge": "^2.2.1"
   },
