--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/programinglive/zettly-editor.git"
+    "url": "git+https://github.com/programinglive/zettly-editor.git"
   },
   "homepage": "https://github.com/programinglive/zettly-editor#readme",
   "bugs": {
