--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "@programinglive/commiter": "^1.0.1",
     "@testing-library/react": "^14.1.2",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -88,6 +88,8 @@
     "husky": "^9.1.7",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.18",
     "tsup": "^8.0.1",
