chore: update prepare script and homepage

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/programinglive/zettly-editor.git"
   },
-  "homepage": "https://github.com/programinglive/zettly-editor#readme",
+  "homepage": "https://zettly-editor.programinglive.com/",
   "bugs": {
     "url": "https://github.com/programinglive/zettly-editor/issues"
   },
