--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -77,5 +77,9 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # built-in token
         run: |
           echo "Registry: $(npm config get registry)"
-          # No --provenance here
-          npm publish "${TARBALL}"
+          VERSION=$(node -p "require('./package.json').version")
+          if npm view "@programinglive/zettly-editor@${VERSION}" version >/dev/null 2>&1; then
+            echo "Version ${VERSION} already published on GitHub Packages, skipping..."
+          else
+            npm publish "${TARBALL}"
+          fi
