--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@programinglive/zettly-editor",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Shadcn-based WYSIWYG editor for Zettly todo and notes applications.",
   "keywords": [
     "tiptap",
@@ -67,6 +67,7 @@
     "@tiptap/core": "^2.0.3",
     "@tiptap/extension-character-count": "^2.0.3",
     "@tiptap/extension-code-block-lowlight": "^2.26.3",
+    "@tiptap/extension-highlight": "^2.26.3",
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-placeholder": "^2.0.3",
     "@tiptap/react": "^2.0.3",
