--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,7 @@ permissions:
   id-token: write     # needed for npm provenance (npmjs.com)
   contents: read
   packages: write     # needed for GitHub Packages
+  deployments: write  # needed to create deployment records
 
 jobs:
   publish:
