--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.3",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@sentry/react": "^10.21.0",
     "@tiptap/core": "^2.0.3",
     "@tiptap/extension-character-count": "^2.0.3",
     "@tiptap/extension-code-block-lowlight": "^2.26.3",
