--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.1.7",
+    "jsdom": "^27.0.1",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
