--- a/package.json
+++ b/package.json
@@ -56,54 +56,57 @@
     "release:patch": "npm run release -- --release-as patch"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-slot": "^1.0.3",
+    "@radix-ui/react-slot": "1.2.4",
     "@radix-ui/react-toggle": "^1.0.3",
-    "@tiptap/core": "^2.0.3",
-    "@tiptap/extension-character-count": "^2.0.3",
-    "@tiptap/extension-code-block-lowlight": "^2.26.3",
-    "@tiptap/extension-highlight": "^2.26.3",
-    "@tiptap/extension-link": "^2.0.3",
-    "@tiptap/extension-placeholder": "^2.0.3",
-    "@tiptap/react": "^2.0.3",
-    "@tiptap/starter-kit": "^2.0.3",
+    "@tailwindcss/postcss": "4.1.18",
+    "@tiptap/core": "3.16.0",
+    "@tiptap/extension-character-count": "3.16.0",
+    "@tiptap/extension-code-block-lowlight": "3.16.0",
+    "@tiptap/extension-highlight": "3.16.0",
+    "@tiptap/extension-link": "3.16.0",
+    "@tiptap/extension-placeholder": "3.16.0",
+    "@tiptap/pm": "3.16.0",
+    "@tiptap/react": "3.16.0",
+    "@tiptap/starter-kit": "3.16.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lowlight": "^2.9.0",
-    "lucide-react": "^0.370.0",
-    "tailwind-merge": "^2.2.1"
+    "highlight.js": "11.11.1",
+    "lowlight": "3.3.0",
+    "lucide-react": "0.562.0",
+    "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@programinglive/commiter": "^1.0.1",
-    "@testing-library/react": "^14.1.2",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
+    "@commitlint/cli": "20.3.1",
+    "@commitlint/config-conventional": "20.3.1",
+    "@programinglive/commiter": "1.2.18",
+    "@testing-library/react": "16.3.2",
+    "@types/node": "25.0.9",
+    "@types/react": "19.2.9",
+    "@types/react-dom": "19.2.3",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.0",
+    "@vitejs/plugin-react": "5.1.2",
+    "autoprefixer": "10.4.23",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.1.7",
     "postcss": "^8.5.6",
-    "prettier": "^3.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "prettier": "3.8.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "standard-version": "^9.5.0",
-    "tailwindcss": "^3.4.18",
-    "tsup": "^8.0.1",
+    "tailwindcss": "4.1.18",
+    "tsup": "8.5.1",
     "typescript": "^5.4.3",
-    "vite": "^5.2.8",
-    "vitest": "^1.5.0"
+    "vite": "7.3.1",
+    "vitest": "4.0.17"
   },
   "standard-version": {
     "releaseCommitMessageFormat": "chore(release): {{currentTag}} 🚀",
