--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "19.2.3"
   },
   "dependencies": {
+    "@eslint/js": "9.39.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "1.2.4",
@@ -79,7 +80,8 @@
     "highlight.js": "11.11.1",
     "lowlight": "3.3.0",
     "lucide-react": "0.562.0",
-    "tailwind-merge": "3.4.0"
+    "tailwind-merge": "3.4.0",
+    "typescript-eslint": "8.53.1"
   },
   "devDependencies": {
     "@commitlint/cli": "20.3.1",
@@ -89,13 +91,13 @@
     "@types/node": "25.0.9",
     "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "8.53.1",
+    "@typescript-eslint/parser": "8.53.1",
     "@vitejs/plugin-react": "5.1.2",
     "autoprefixer": "10.4.23",
     "eslint": "9.39.2",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-react-hooks": "7.0.1",
     "husky": "^9.1.7",
     "postcss": "^8.5.6",
     "prettier": "3.8.0",
