--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   "devDependencies": {
     "@commitlint/cli": "20.3.1",
     "@commitlint/config-conventional": "20.3.1",
-    "@programinglive/commiter": "1.2.18",
+    "@programinglive/commiter": "^1.2.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "16.3.2",
     "@types/node": "25.0.9",
